STM32/.metadata/.plugins/org.eclipse.cdt.ui/Projet_Robot_I.build.log
08:28:37 **** Incremental Build of configuration Debug for project Projet_Robot_I ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F072xB -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:131:31: error: 'LD7' undeclared (first use in this function)
  131 |    HAL_GPIO_TogglePin (GPIOC, LD7);
      |                               ^~~
../Core/Src/main.c:131:31: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:118:5: warning: unused variable 'test' [-Wunused-variable]
  118 | int test=0;
      |     ^~~~
make: *** [Core/Src/subdir.mk:52: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

08:28:38 Build Failed. 2 errors, 1 warnings. (took 430ms)

